--- a/java-project/java-maven-sonar-argocd-helm-k8s/spring-boot-app/src/main/resources/templates/index.html
+++ b/java-project/java-maven-sonar-argocd-helm-k8s/spring-boot-app/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"/>
     <link data-th-href="@{/css/main.css?{id}(id=${timestamp})}" rel="stylesheet">
-    <title>CThis is my CI-CD Project</title>
+    <title>This is my CI-CD Project</title>
 </head>
 <body>
 
